tests/test_exposure_with_different_rules_2/netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: match-exp-2
  namespace: hello-world
spec:
  podSelector:
    matchLabels:
      app: a-app
  ingress:
  - from: 
    - podSelector:
          matchExpressions:
          - key: app
            operator: In
            values:
            - x
    ports:
    - port: 9090
      protocol: TCP
  - from:
    - podSelector:
          matchExpressions:
          - key: app
            operator: Exists
    ports:
    - port: 8080
      protocol: TCP
